--- a/contact-me.html
+++ b/contact-me.html
@@ -8,23 +8,20 @@
 
 <body>
   <h1>My Contact Details</h1>
-  <p>My Fictional Addres</p>
-  <p>05398453575</p>
-  <p>barissuc448@gmail.com</p>
-  <a href="mailto:barissuc448@gmail.com">Send email to nowhere</a>
-  
-<hr>
-<form enctype="text/plain" action="mailto:barissuc448@gmail.com" method="post">
-  <label>Your Name:</label>
-  <input type="text" name="yourName" value=""><br>
-  <label>Your Email:</label>
-  <input type="email" name="yourEmail" value=""><br>
-  <label>Your Message:</label><br>
-  <textarea name="yourMessage" rows="10" cols="30"></textarea>
-  <input type="submit" name="">
+  <p>05938453575</p>
+  <p>barissucuoglu34@gmail.com</p>
+  <hr>
+  <form action="mailto:barissucuoglu34@gmail.com" method="post" enctype="text/plain">
+    <label>Your Name:</label>
+    <input type="text" name="yourName" value=""><br>
+    <label>Your E-mail:</label>
+    <input type="email" name="yourEmail" value=""><br>
+    <label>Your Massage</label><br>
+    <textarea name="yourMassage" rows="10" cols="30"></textarea><br>
+    <input type="submit" name=""><br>
 
-</form>
 
+  </form>
 </body>
 
 </html>
