--- a/index.html
+++ b/index.html
@@ -3,70 +3,67 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Barış's Personal Site</title>
+  <title>Barış's Personal Web Site</title>
 </head>
 
 <body>
-  <table>
+  <table cellspacing="20">
     <tr>
-      <td>  <img src="images/baris.png" alt="Barış profile picture"></td>
-      <td><h1>Barış Sucuoğlu</h1>
-      <p><em>Just <strong>Student</strong></em></p>
-      <p>I am a student.I love watching film and reading my own books.</p></td>
+      <td><img src="images/baris.png" alt="Barış profile picture"></td>
+      <td>
+        <h1>Barış Sucuoğlu</h1>
+        <p><em>Student</em></p>
+        <p>I am a just student and i love coffe.</p>
+      </td>
     </tr>
   </table>
-
   <hr>
   <h3>Education</h3>
   <ul>
-    <li>75. Year Primary Education</li>
+    <li>75. Yıl Primary School</li>
     <li>Suat Terimer High School</li>
   </ul>
-  <h3>My Hobbies</h3>
-  <ol>
-    <li><a href="https://www.imdb.com/chart/top/">Watching film</a></li>
-    <li>Reading books</li>
-    <li><a href="https://open.spotify.com/?_ga=2.241988544.359517731.1580548066-1782153559.1580548066"><em>Listening music</em></a></li>
-  </ol>
+  <hr>
   <h3>Work Experience</h3>
   <table cellspacing="10">
     <thead>
-      <th>Dates</th>
-      <th>Work</th>
+      <tr>
+        <th>Dates</th>
+        <th>Work</th>
+      </tr>
     </thead>
     <tbody>
       <tr>
-        <td>2016-2017</td>
-        <td>Wedding Salon</td>
+        <td>2013</td>
+        <td>Wedding Bussines</td>
       </tr>
       <tr>
-        <td>2018</td>
-        <td>Migros</td>
+        <td>2017-2018</td>
+        <td>Migros as a cashier</td>
       </tr>
     </tbody>
+
   </table>
   <hr>
   <h3>Skills</h3>
   <table cellspacing="10">
     <tr>
+      <td>Html</td>
+      <td>⭐⭐⭐</td>
+    </tr>
+    <tr>
       <td>English</td>
       <td>⭐⭐⭐</td>
     </tr>
     <tr>
-      <td>Html</td>
-      <td>⭐</td>
-    </tr>
-    <tr>
-      <td>Java</td>
-      <td>⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Photography</td>
-      <td>⭐⭐</td>
+      <td>Mathematics</td>
+      <td>⭐⭐⭐⭐</td>
     </tr>
   </table>
+
   <hr>
   <a href="contact-me.html">Contact Me</a>
+  <a href="hobbies.html">My Hobbies</a>
 </body>
 
 </html>
